--- a/.github/workflows/commit-stage.yml
+++ b/.github/workflows/commit-stage.yml
@@ -6,7 +6,7 @@ jobs:
     name: Build and Test
     runs-on: ubuntu-22.04
     permissions:
-      contents: read
+      contents: write
       security-events: write
     steps:
       - name: Checkout source code
