--- a/.github/workflows/commit-stage.yml
+++ b/.github/workflows/commit-stage.yml
@@ -6,7 +6,8 @@ jobs:
     name: Build and Test
     runs-on: ubuntu-22.04
     permissions:
-      contents: write
+      contents: read
+      actions: read
       security-events: write
     steps:
       - name: Checkout source code
