--- a/.github/workflows/commit-stage.yml
+++ b/.github/workflows/commit-stage.yml
@@ -6,8 +6,8 @@ jobs:
     name: Build and Test
     runs-on: ubuntu-22.04
     permissions:
-      contents: read
-      actions: read
+      contents: write
+      actions: write
       security-events: write
     steps:
       - name: Checkout source code
