--- a/src/test/resources/application-integration.yml
+++ b/src/test/resources/application-integration.yml
@@ -1,3 +1,6 @@
 spring:
   datasource:
     url: jdbc:tc:postgresql:14.4:///
+    hikari:
+      connection-timeout: 50000 #ms
+      maximum-pool-size: 2
