--- a/.github/workflows/commit-stage.yml
+++ b/.github/workflows/commit-stage.yml
@@ -37,7 +37,7 @@ jobs:
       - name: Build, unit tests and integration tests
         run: |
           chmod +x gradlew
-          ./gradlew build --debug
+          ./gradlew build --info
   package:
     name: Package and Publish
     if: ${{ github.ref == 'refs/heads/main' }}
